examples/test/testpolicy15165.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15165
  namespace: namespace242
spec:
  podSelector:
    matchLabels:
      key17: value9
      key30: value8
      key25: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value47
      podSelector:
        matchLabels:
          key39: value23
